typewriting effect (bug on mobile)

--- a/stile.css
+++ b/stile.css
@@ -47,6 +47,7 @@ html,body,#home
 #menu
 {
     margin-top: 25%;
+    text-align: center;
 }
 
 .navMenu
@@ -112,4 +113,29 @@ html,body,#home
     height: 2em;
     font-size: larger;
 }
+
+#menu h2 {
+    width: fit-content;
+    overflow: hidden; /* Ensures the content is not revealed until the animation */
+    border-right: .15em solid orange; /* The typwriter cursor */
+    white-space: nowrap; /* Keeps the content on a single line */
+    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+    letter-spacing: .15em; /* Adjust as needed */
+    animation:
+            typing 3.5s steps(40, end),
+            blink-caret .75s step-end infinite;
+}
+
+/* The typing effect */
+@keyframes typing {
+    from { width: 0 }
+    to { width: 100% }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+    from, to { border-color: transparent }
+    50% { border-color: orange; }
+}
+
 
